refactor: adapt OwnerUpdateRentalService to Clean Architecture with RequestModel and Presenter