@@ -1,7 +1,9 @@
 package br.ifsp.application.rental.update;
 
 import br.ifsp.application.rental.repository.JpaRentalRepository;
+import br.ifsp.application.rental.update.owner.OwnerUpdateRentalPresenter;
 import br.ifsp.application.rental.update.owner.OwnerUpdateRentalService;
+import br.ifsp.application.rental.update.owner.IOwnerUpdateRentalService.RequestModel;
 import br.ifsp.domain.models.property.Property;
 import br.ifsp.domain.models.rental.Rental;
 import br.ifsp.domain.models.rental.RentalState;
@@ -10,10 +12,9 @@ import br.ifsp.domain.models.user.User;
 import br.ifsp.domain.shared.valueobjects.Address;
 import br.ifsp.domain.shared.valueobjects.Price;
 import org.junit.jupiter.api.*;
-import org.junit.jupiter.params.*;
-import org.junit.jupiter.params.provider.*;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.*;
-
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -22,16 +23,20 @@ import java.util.*;
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-
 public class OwnerUpdateRentalServiceTest {
 
     @Mock
     private JpaRentalRepository rentalRepositoryMock;
+
+    @Mock
+    private OwnerUpdateRentalPresenter presenter;
+
     @InjectMocks
     private OwnerUpdateRentalService sut;
 
     private User tenant;
     private Property property;
+
     @BeforeEach
     void setup() {
         MockitoAnnotations.openMocks(this);
@@ -51,13 +56,7 @@ public class OwnerUpdateRentalServiceTest {
                 "Wuthering Heights",
                 "An isolated farmhouse on the Yorkshire moors.",
                 new Price(new BigDecimal("250.00")),
-                new Address(
-                        "1",
-                        "Moor Lane",
-                        "Haworth",
-                        "West Yorkshire",
-                        "BD22"
-                ),
+                new Address("1", "Moor Lane", "Haworth", "West Yorkshire", "BD22"),
                 tenant,
                 new ArrayList<>()
         );
@@ -65,140 +64,125 @@ public class OwnerUpdateRentalServiceTest {
 
     @Nested
     @DisplayName("Rental Denial Tests")
-    class DenyRentalServiceTest{
-        @Tag("UnitTest")
-        @Tag("TDD")
-        @DisplayName("Should set a pending or blocked rental as denied if property owner denies it")
+    class DenyRentalServiceTest {
         @Test
-        void shouldSetAPendingRentalAsDeniedIfPropertyOwnerDeniesIt(){
+        void shouldSetAPendingRentalAsDeniedIfPropertyOwnerDeniesIt() {
             Rental rental = new Rental();
+            rental.setId(UUID.randomUUID());
+            rental.setUser(tenant);
+            rental.setProperty(property);
             rental.setState(RentalState.PENDING);
             when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
-            sut.deny(rental.getId());
+
+            RequestModel request = new RequestModel(tenant.getId(), rental.getId());
+            sut.denyRental(presenter, request);
+
             assertThat(rental.getState()).isEqualTo(RentalState.DENIED);
+            verify(presenter).prepareSuccessView(any());
         }
-        @Tag("UnitTest")
-        @Tag("TDD")
-        @DisplayName("Should not permit denial to a rental with status different than Pending or Restrained")
+
         @ParameterizedTest
         @EnumSource(value = RentalState.class, names = {"CONFIRMED", "EXPIRED", "DENIED"})
-        void shouldNotPermitDenialToARentalWithStateDifferentThanPendingOrRestrained(RentalState state){
+        void shouldNotPermitDenialToARentalWithInvalidState(RentalState state) {
             Rental rental = new Rental();
-
+            rental.setId(UUID.randomUUID());
+            rental.setUser(tenant);
+            rental.setProperty(property);
             rental.setState(state);
             when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
-            assertThatExceptionOfType(UnsupportedOperationException.class).isThrownBy(()->sut.deny(rental.getId()));
+
+            RequestModel request = new RequestModel(tenant.getId(), rental.getId());
+            sut.denyRental(presenter, request);
+
+            verify(presenter).prepareFailView(any(UnsupportedOperationException.class));
         }
-
-
     }
-    @DisplayName("Cancel Confirmed Rental")
-    @Nested
-    class CancelConfirmedRentalTests{
-        @DisplayName("Should not permit to cancel an unconfirmed rental")
-        @Tag("UnitTest")
-        @Tag("TDD")
-        @ParameterizedTest
-        @EnumSource(value = RentalState.class, names = {"PENDING","DENIED","EXPIRED","RESTRAINED","CANCELLED"})
-        void shouldNotPermitToCancelAnUnconfirmedRental(RentalState state){
-            Rental rental = Rental.builder().
-                    id(UUID.randomUUID())
-                    .startDate(LocalDate.now().plusDays(10))
-                    .state(state).build();
-            when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
-            assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(()->sut.cancel(rental.getId()));
-        }
 
-        @DisplayName("Should not allow a cancel date after the Start date of rental")
-        @Test
-        @Tag("TDD")
-        @Tag("UnitTest")
-        void shouldNotAllowACancelDateAfterTheStartDateOfRental(){
-            LocalDate startDate = LocalDate.now();
-            LocalDate cancelDate = LocalDate.now().plusDays(10);
-            Rental rental= Rental.builder()
+    @Nested
+    class CancelConfirmedRentalTests {
+        @ParameterizedTest
+        @EnumSource(value = RentalState.class, names = {"PENDING", "DENIED", "EXPIRED", "RESTRAINED", "CANCELLED"})
+        void shouldNotPermitToCancelUnconfirmedRental(RentalState state) {
+            Rental rental = Rental.builder()
                     .id(UUID.randomUUID())
-                    .state(RentalState.CONFIRMED)
-                    .startDate(startDate)
+                    .startDate(LocalDate.now().plusDays(10))
+                    .state(state)
                     .build();
             when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
-            assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(()->sut.cancel(rental.getId(),cancelDate));
+
+            sut.cancelRental(presenter, new RequestModel(UUID.randomUUID(), rental.getId()), LocalDate.now());
+
+            verify(presenter).prepareFailView(any(IllegalArgumentException.class));
         }
 
-        @DisplayName("Should change rental state to canceled")
         @Test
-        @Tag("UnitTest")
-        @Tag("TDD")
-        void shouldChangeRentalStateToCanceled(){
-            property= new Property();
+        void shouldNotAllowCancelDateAfterStartDate() {
+            Rental rental = Rental.builder()
+                    .id(UUID.randomUUID())
+                    .startDate(LocalDate.now())
+                    .state(RentalState.CONFIRMED)
+                    .build();
+
+            when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
+
+            sut.cancelRental(presenter, new RequestModel(UUID.randomUUID(), rental.getId()), LocalDate.now().plusDays(1));
+
+            verify(presenter).prepareFailView(any(IllegalArgumentException.class));
+        }
+
+        @Test
+        void shouldChangeRentalStateToCanceled() {
             property.setId(UUID.randomUUID());
             Rental rental = Rental.builder()
                     .id(UUID.randomUUID())
                     .property(property)
                     .startDate(LocalDate.now())
                     .state(RentalState.CONFIRMED)
+                    .user(tenant)
                     .build();
+
             when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
-            sut.cancel(rental.getId(), LocalDate.now().minusDays(1));
+            when(rentalRepositoryMock.findRentalsByOverlapAndState(any(), eq(RentalState.RESTRAINED), any(), any(), any()))
+                    .thenReturn(Collections.emptyList());
+
+            sut.cancelRental(presenter, new RequestModel(tenant.getId(), rental.getId()), LocalDate.now().minusDays(1));
+
             assertThat(rental.getState()).isEqualTo(RentalState.CANCELLED);
-
+            verify(presenter).prepareSuccessView(any());
         }
-        
-        @DisplayName("Should change Restrained rentals that conflicts to Pending")
+
         @Test
-        @Tag("UnitTest")
-        @Tag("TDD")
-        void shouldChangeRestrainedRentalsThatConflictsToPending(){
-            property = new Property();
+        void shouldChangeRestrainedRentalsThatConflictToPending() {
             property.setId(UUID.randomUUID());
-            Rental rental = Rental.builder().
-                    startDate(LocalDate.now().plusDays(1)).
-                    endDate(LocalDate.now().plusDays(10)).
-                    id(UUID.randomUUID()).
-                    property(property).
-                    state(RentalState.CONFIRMED).
-                    build();
+            Rental rental = Rental.builder()
+                    .startDate(LocalDate.now().plusDays(1))
+                    .endDate(LocalDate.now().plusDays(10))
+                    .id(UUID.randomUUID())
+                    .property(property)
+                    .state(RentalState.CONFIRMED)
+                    .user(tenant)
+                    .build();
 
-            Rental restrainedRental = Rental.builder().
-                    startDate(LocalDate.now().plusDays(1)).
-                    endDate(LocalDate.now().plusDays(10)).
-                    id(UUID.randomUUID()).
-                    property(property).
-                    state(RentalState.RESTRAINED).
-                    build();
+            Rental r1 = Rental.builder().startDate(rental.getStartDate()).endDate(rental.getEndDate()).property(property).state(RentalState.RESTRAINED).id(UUID.randomUUID()).build();
+            Rental r2 = Rental.builder().startDate(rental.getStartDate()).endDate(rental.getEndDate()).property(property).state(RentalState.RESTRAINED).id(UUID.randomUUID()).build();
 
-            Rental restrainedRental1 = Rental.builder().
-                    startDate(LocalDate.now().plusDays(1)).
-                    endDate(LocalDate.now().plusDays(10)).
-                    id(UUID.randomUUID()).
-                    property(property).
-                    state(RentalState.RESTRAINED).
-                    build();
-            List<Rental> rentals = List.of(restrainedRental, restrainedRental1);
-            mockReturnSetups(rental);
-            when(rentalRepositoryMock.findRentalsByOverlapAndState(property.getId(),RentalState.RESTRAINED,rental.getStartDate(),rental.getEndDate(),rental.getId())).thenReturn(rentals);
-            sut.cancel(rental.getId());
-            assertThat(rentals).allMatch(rental1 -> rental1.getState().equals(RentalState.PENDING));
+            when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
+            when(rentalRepositoryMock.findRentalsByOverlapAndState(any(), eq(RentalState.RESTRAINED), any(), any(), any()))
+                    .thenReturn(List.of(r1, r2));
 
+            sut.cancelRental(presenter, new RequestModel(tenant.getId(), rental.getId()), LocalDate.now());
+
+            assertThat(r1.getState()).isEqualTo(RentalState.PENDING);
+            assertThat(r2.getState()).isEqualTo(RentalState.PENDING);
+            verify(rentalRepositoryMock).saveAll(List.of(r1, r2));
         }
     }
-
-    private void mockReturnSetups(Rental rental) {
-        when(rentalRepositoryMock.findById(rental.getId())).thenReturn(Optional.of(rental));
-    }
-
 
     @Nested
-    @DisplayName("Confirm Rental Tests")
     class ConfirmRentalTests {
-
-        @Tag("UnitTest")
-        @Tag("TDD")
-        @DisplayName("Should confirm rental when no conflicting confirmed rentals exist")
         @Test
-        void shouldConfirmPendingRentalWithoutConflict() {
+        void shouldConfirmRentalWithoutConflict() {
             UUID rentalId = UUID.randomUUID();
-
             Rental rental = Rental.builder()
                     .id(rentalId)
                     .user(tenant)
@@ -209,28 +193,38 @@ public class OwnerUpdateRentalServiceTest {
                     .build();
 
             when(rentalRepositoryMock.findById(rentalId)).thenReturn(Optional.of(rental));
-            when(rentalRepositoryMock.findRentalsByOverlapAndState(
-                    property.getId(),
-                    RentalState.CONFIRMED,
-                    rental.getStartDate(),
-                    rental.getEndDate(),
-                    rental.getId()
-            )).thenReturn(List.of());
+            when(rentalRepositoryMock.findRentalsByOverlapAndState(any(), eq(RentalState.CONFIRMED), any(), any(), any()))
+                    .thenReturn(Collections.emptyList());
 
-            sut.confirmRental(rentalId, property.getOwner().getId());
+            sut.confirmRental(presenter, new RequestModel(tenant.getId(), rentalId));
 
             assertThat(rental.getState()).isEqualTo(RentalState.CONFIRMED);
-            verify(rentalRepositoryMock).save(rental);
+            verify(presenter).prepareSuccessView(any());
+        }
+
+        @ParameterizedTest
+        @EnumSource(value = RentalState.class, names = {"CONFIRMED", "EXPIRED", "DENIED", "RESTRAINED"})
+        void shouldNotAllowConfirmingNonPendingRental(RentalState state) {
+            UUID rentalId = UUID.randomUUID();
+            Rental rental = Rental.builder()
+                    .id(rentalId)
+                    .user(tenant)
+                    .property(property)
+                    .startDate(LocalDate.of(1801, 2, 1))
+                    .endDate(LocalDate.of(1801, 2, 10))
+                    .state(state)
+                    .build();
+
+            when(rentalRepositoryMock.findById(rentalId)).thenReturn(Optional.of(rental));
+
+            sut.confirmRental(presenter, new RequestModel(tenant.getId(), rentalId));
+
+            verify(presenter).prepareFailView(any(UnsupportedOperationException.class));
         }
     }
 
     @Nested
-    @DisplayName("Update Rental Tests")
     class UpdateRentalTests {
-
-        @Tag("UnitTest")
-        @Tag("TDD")
-        @DisplayName("Should restrain conflicting pending rentals")
         @Test
         void shouldRestrainConflictingPendingRentals() {
             UUID rentalId = UUID.randomUUID();
@@ -243,9 +237,8 @@ public class OwnerUpdateRentalServiceTest {
                     .state(RentalState.CONFIRMED)
                     .build();
 
-            UUID conflictingRentalId = UUID.randomUUID();
-            Rental conflictingRental = Rental.builder()
-                    .id(conflictingRentalId)
+            Rental conflicting = Rental.builder()
+                    .id(UUID.randomUUID())
                     .user(tenant)
                     .property(property)
                     .startDate(LocalDate.of(1801, 2, 5))
@@ -253,63 +246,14 @@ public class OwnerUpdateRentalServiceTest {
                     .state(RentalState.PENDING)
                     .build();
 
-            when(rentalRepositoryMock.findRentalsByOverlapAndState(
-                    property.getId(),
-                    RentalState.PENDING,
-                    confirmedRental.getStartDate(),
-                    confirmedRental.getEndDate(),
-                    confirmedRental.getId()))
-                    .thenReturn(List.of(conflictingRental));
+            when(rentalRepositoryMock.findRentalsByOverlapAndState(any(), eq(RentalState.PENDING), any(), any(), any()))
+                    .thenReturn(List.of(conflicting));
 
+            sut = new OwnerUpdateRentalService(rentalRepositoryMock);
             sut.restrainPendingRentalsInConflict(confirmedRental);
 
-            assertThat(conflictingRental.getState()).isEqualTo(RentalState.RESTRAINED);
-            verify(rentalRepositoryMock).save(conflictingRental);
-        }
-    }
-
-    @Tag("UnitTest")
-    @Tag("TDD")
-    @DisplayName("Should not allow confirming a rental that is not in PENDING state")
-    @ParameterizedTest
-    @EnumSource(value = RentalState.class, names = {"CONFIRMED", "EXPIRED", "DENIED", "RESTRAINED"})
-    void shouldNotAllowConfirmingRentalNotInPendingState(RentalState state) {
-        UUID rentalId = UUID.randomUUID();
-
-        Rental rental = Rental.builder()
-                .id(rentalId)
-                .user(tenant)
-                .property(property)
-                .startDate(LocalDate.of(1801, 2, 1))
-                .endDate(LocalDate.of(1801, 2, 10))
-                .state(state)
-                .build();
-
-        when(rentalRepositoryMock.findById(rentalId)).thenReturn(Optional.of(rental));
-
-        assertThatExceptionOfType(UnsupportedOperationException.class)
-                .isThrownBy(() -> sut.confirmRental(rentalId, property.getOwner().getId()))
-                .withMessage("Rental is not in a PENDING state and cannot be confirmed.");
-    }
-
-    @Nested
-    @DisplayName("Null Input Validation Tests")
-    class NullInputValidationTests {
-        @Tag("UnitTest")
-        @DisplayName("Should throw exception when rental ID is null on confirm")
-        @Test
-        void shouldThrowExceptionWhenRentalIdIsNullOnConfirm() {
-            assertThatThrownBy(() -> new OwnerUpdateRentalService(rentalRepositoryMock).confirmRental(null, UUID.randomUUID()))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessageContaining("Rental not found");
-        }
-
-        @Tag("UnitTest")
-        @DisplayName("Should throw exception when rental is null on restrain conflict")
-        @Test
-        void shouldThrowExceptionWhenRentalIsNullOnRestrainConflict() {
-            assertThatThrownBy(() -> new OwnerUpdateRentalService(rentalRepositoryMock).restrainPendingRentalsInConflict(null))
-                    .isInstanceOf(NullPointerException.class);
+            assertThat(conflicting.getState()).isEqualTo(RentalState.RESTRAINED);
+            verify(rentalRepositoryMock).save(conflicting);
         }
     }
 }
